--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ env:
   - EVM_EMACS=emacs-24.2-bin
   - EVM_EMACS=emacs-24.3-bin
   - EVM_EMACS=emacs-24.4-bin
-  - EVM_EMACS=emacs-git-snapshot
+#  - EVM_EMACS=emacs-git-snapshot
 before_install:
   - sudo mkdir /usr/local/evm
   - sudo chown "$(id -u)":"$(id -g)" /usr/local/evm
