Rename patch to minor in bumpversion.cfg

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,7 @@
 [bumpversion]
 current_version = 1.0
-parse = (?P<major>\d+)\.(?P<patch>.*)
-serialize = {major}.{patch}
+parse = (?P<major>\d+)\.(?P<minor>.*)
+serialize = {major}.{minor}
 files = buttercup.el buttercup-pkg.el
 commit = True
 tag = True
-
