--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,7 +2,7 @@
 current_version = 1.24
 parse = (?P<major>\d+)\.(?P<minor>.*)
 serialize = {major}.{minor}
-files = buttercup.el buttercup-pkg.el
+files = buttercup.el
 commit = True
 tag = True
 
