actions: Set restrictive permissions for github workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,20 @@
 name: Build and test
 
+permissions:
+  actions: read
+  checks: read
+  contents: read
+  deployments: none
+  id-token: none
+  issues: read
+  discussions: none
+  packages: none
+  pages: none
+  pull-requests: read
+  repository-projects: read
+  security-events: read
+  statuses: read
+
 on:
   pull_request:
   push:
