tests: Test on Emacs 29.4 and release-snapshot
release-snapshot is defined in https://github.com/purcell/nix-emacs-ci.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,8 @@ jobs:
           - 29.1
           - 29.2
           - 29.3
+          - 29.4
+          - release-snapshot
           - snapshot
     steps:
     - uses: purcell/setup-emacs@master
